syntax = "proto3";
package auth;


service Auth {
    rpc basic (basicCreds) returns (authResult);
    rpc create (basicCreds) returns (createResult);
    rpc modify (basicCreds) returns (createResult);
}



message basicCreds {
    string username = 1;
    string password = 2;
}

message authResult {
    bool success = 4;
    string token = 3;
}

message createResult {
    bool success = 1;
}